@@ -302,6 +302,7 @@ NCHOptions.prototype = {
         "nch-general-filter_out_regexp_services",
         "nch-view-show_window_column_information",
         "nch-view-show_window_column_alias",
+        "nch-view-show_window_column_flags",
         "nch-general-one_window_only",
         "nch-general-filter_out_acknowledged",
         "nch-general-filter_out_disabled_notifications",
@@ -441,6 +442,7 @@ NCHOptions.prototype = {
         "nch-general-filter_out_regexp_services",
         "nch-view-show_window_column_information",
         "nch-view-show_window_column_alias",
+        "nch-view-show_window_column_flags",
         "nch-general-one_window_only",
         "nch-general-filter_out_acknowledged",
         "nch-general-filter_out_disabled_notifications",
