@@ -128,3 +128,5 @@
 <!ENTITY nch.prefs.filteroutconditions "události odpovídající podmínkám">
 <!ENTITY nch.prefs.filteroutexcept "všechny události mimo podmínky">
 <!ENTITY nch.prefs.conditions "Podmínky">
+<!ENTITY nch.prefs.showflagscolumn "Zobrazovat sloupec Příznaky v informačním okně">
+
