@@ -91,3 +91,4 @@ disable=Vypnout
 enable=Zapnout
 disabledRun=Nagios Checker nemůže běžet v tomto okně prohlížeče. Viz nastavení rozšíření. 
 stoppedRun=Běh rozšíření Nagios Checker byl zastaven. Použijte kontextové menu rozšíření k opětovnému spuštění.
+flags=Příznaky
