@@ -129,3 +129,4 @@
 <!ENTITY nch.prefs.filteroutconditions "alerts by conditions">
 <!ENTITY nch.prefs.filteroutexcept "all alerts except the conditions">
 <!ENTITY nch.prefs.conditions "Conditions">
+<!ENTITY nch.prefs.showflagscolumn "Show Flags column in information window">
