@@ -78,3 +78,4 @@ disable=Disable
 enable=Enable
 disabledRun=Nagios Checker is not allowed to run in this window. Check the extension's settings. 
 stoppedRun=Run of Nagios Checker is stopped. Use extension's context menu to start it again.
+flags=Flags
