@@ -4,6 +4,7 @@
 * NEW: ability to choose inverse filtering
 * NEW: added filtering of flapping hosts and services
 * NEW: support for Flock 0.9+
+* NEW: added option to show hosts and services flags in tooltip
 
 0.9.5
 * BUGFIX: Stop/Run issues when triggered from window other than first
